--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ fixable = ["ALL"]
 select = ["ALL"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*.py" = ["S101"]
+"tests/*.py" = ["D100", "D103", "S101"]
 
 [tool.ruff.format]
 docstring-code-format = true
